@@ -183,7 +183,6 @@ conf/logrotate/Makefile
 conf/hooks/Makefile
 conf/.gconf.path
 migration/Makefile
-migration/events/Makefile
 migration/logs/Makefile
 www/Makefile
 Makefile
