@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = events logs
+SUBDIRS = logs
 
 Migrationsdir = @DATADIR@/ebox-logs/migration
 
