@@ -1,10 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-Migrationsdir = @DATADIR@/ebox-events/migration
-
-nobase_Migrations_SCRIPTS = 0001_add_conf_configureeventtable.pl \
-	0002_add_conf_diskfree_watcher.pl
-
-EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
-
-MAINTAINERCLEANFILES = Makefile.in
