@@ -2,6 +2,10 @@ HEAD
 	+ Move enable field to first row in ConfigureDispatcherDataTable
 	+ Add a warning to let users know that a module with unsaved changes
 	  is disabled
+	+ Remove events migration directory:
+		- 0001_add_conf_configureeventtable.pl
+		- 0002_add_conf_diskfree_watcher.pl
+	+ Remove migration script logs/0001_update_configurelogtable.pl
 1.3.15
 	+ Bug fix: Call EBox::Global::sortModulesByDependencies when
 	  saving all modules and remove infinite loop in that method.
